<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white">

    <TextView
        android:id="@+id/appName"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:text="@string/inventory_app"
        android:textColor="@color/dark_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/shape_style_round_button"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/password"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_style_round_button"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password">

        <Button
            android:id="@+id/logInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_blue" />

        <Button
            android:id="@+id/createUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_user"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_blue" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>