<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white">

    <TextView
        android:id="@+id/createUser"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:text="@string/create_user"
        android:textColor="@color/dark_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newUsername"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/new_username"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_style_round_button"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createUser" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:background="@drawable/shape_style_round_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUsername" />

    <EditText
        android:id="@+id/reenterPassword"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:background="@drawable/shape_style_round_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />

    <Button
        android:id="@+id/createNewUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Create New User"
        android:textColor="@color/black"
        android:backgroundTint="@color/light_blue"
        android:background="@drawable/shape_style_round_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reenterPassword" />

    <Button
        android:id="@+id/alreadyExist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Existing User"
        android:textColor="@color/black"
        android:backgroundTint="@color/light_blue"
        android:background="@drawable/shape_style_round_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createNewUserButton" />
</androidx.constraintlayout.widget.ConstraintLayout>