<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white">

    <TextView
        android:id="@+id/addItemText"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:text="Add Item"
        android:textColor="@color/dark_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/itemName"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="Item"
        android:background="@drawable/shape_style_round_button"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addItemText" />

    <EditText
        android:id="@+id/itemDescription"
        android:layout_width="271dp"
        android:layout_height="122dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_style_round_button"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemName" />

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginTop="208dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemName">

        <EditText
            android:id="@+id/addItemQuantity"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/shape_style_round_button"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/quantity"
            android:inputType="number" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/addItemButton"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:backgroundTint="@color/light_blue"
            android:text="@string/add_item"
            android:textColor="@color/green" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>